namespace whiteboard-ddd.Domain;

public class Customer
{
}

public class LineItem
{
}

public class Order
{
}

public class Product
{
}

public class ShippingAddress
{
}
